Allow users to provide copying of optional files without failing. (#41)
Co-authored-by: DavidNew-NOAA <134300700+DavidNew-NOAA@users.noreply.github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,5 +67,5 @@ run-coverage = true
 addopts = --cov=wxflow --cov-report=term-missing --cov-report=xml --cov-report=html
 
 [tool:pycodestyle]
-exclude = .git,.github,venv,.vscode,docs/conf.py
+exclude = .git,.github,.venv,venv,.vscode,docs/conf.py
 max-line-length = 160
